@@ -1,34 +1,0 @@
-﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<strings>
-	<string id="30000">General</string>
-	<string id="30001">File Output Directory:</string>
-	<string id="30002">List Movies</string>
-	<string id="30003">List TvShows</string>
-	<string id="30004">Please Select Output Directory.</string>
-	<string id="30005">HTML File Complete.</string>
-	<string id="30006">Path: </string>
-	<string id="30007">Library Report</string>
-	<string id="30008">Custom File Name [COLOR gold][I] *Note: Include file extention(.html/.htm/.php)* [/I][/COLOR]</string>
-	<string id="30009">File Name:</string>
-	<string id="30010">Include Plot</string>
-	<string id="30011">Include Episodes Titles</string>
-	<string id="30012">XBMC Library Report.html</string>
-
-	<string id="30020">FTP Upload</string>
-	<string id="30021">Enable FTP File Upload</string>
-	<string id="30022">Host:</string>
-	<string id="30023">User:</string>
-	<string id="30024">Password:</string>
-	<string id="30025">FTP File Transfer Successful.</string>
-	<string id="30026">FTP File Transfer FAILED.</string>
-	
-	<string id="30030">Sort:</string>
-	<string id="30031">Ascending</string>
-	<string id="30032">Descending</string>	
-	<string id="30033">Sort By:</string>
-	<string id="30034">Title</string>
-	<string id="30035">Year</string>
-	<string id="30036">Rating</string>
-	<string id="30037">Date Added</string>
-
-</strings>
