@@ -3,7 +3,7 @@
 	<category label="30000">
 		<setting id="save_location" type="folder" source="files" label="30001" default=""/>		
 		<setting id="custom_file_name" type="bool" label="30008" default="false"/>
-		<setting id="file_name" type="text" label="30009" default="XBMC Library Report.html" enable="eq(-1,true)" visible="eq(-1,true)"/>	
+		<setting id="file_name" type="text" label="30009" subsetting="true" default="XBMC Library Report.html" enable="eq(-1,true)" visible="eq(-1,true)"/>	
 		<setting type="sep" />
 		
 		<setting id="includemovies" type="bool" label="30002" default="true"/>
@@ -23,6 +23,13 @@
 		<setting type="sep" />		
 		<setting id="server" type="text" label="30022" subsetting="true" enable="eq(-2,true)" default=""/>
 		<setting id="user" type="text" label="30023" subsetting="true" enable="eq(-3,true)" default=""/>
-		<setting id="password" type="text" label="30024" subsetting="true" enable="eq(-4,true)" default="" option="hidden"/>		
+		<setting id="password" type="text" label="30024" subsetting="true" enable="eq(-4,true)" default="" option="hidden"/>
+		<setting type="sep" />
+		<setting type="lsep" label="30027"/>
+		<setting id="enable_ftp_dir" type="bool" label="30028" default="false" enable="eq(-7,true)"/>
+		<setting id="ftp_dir" type="text" label="30029" default="" subsetting="true" enable="eq(-1,true) + eq(-8,true)"/>
+		<setting type="sep" />
+		<setting type="lsep" label="30038"/>
+		<setting type="lsep" label="30039"/>
 	</category>
 </settings>
